clean up html and possible fix to overlow on mobile issue

--- a/src/styles/_transitions.scss
+++ b/src/styles/_transitions.scss
@@ -67,7 +67,8 @@
       }
       .body {
         opacity: 0;
-        transform: translateX(50px);
+        // do -50 instead of 50 due to overflow issue
+        transform: translateX(-50px);
         transition: none;
       }
     }
